fix: select input dropdowns being clipped inside scroll regions

--- a/webui/src/scss/_controls.scss
+++ b/webui/src/scss/_controls.scss
@@ -78,3 +78,7 @@ input[type='checkbox']:checked {
 // 		margin-bottom: 0;
 // 	}
 // }
+
+.select-control__menu-portal {
+	z-index: 100 !important;
+}
